--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-#For multiple instance,0 will provide random number
-server.port = ${PORT:0}
-#If you want to get single instance
-#server.port=8080
-spring.application.name = rab
-eureka.client.serviceUrl.defaultZone= http://localhost:8010/eureka
-spring.devtools.restart.enabled= true
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+server.port = 8010
+spring.application.name = discoveryservice
+eureka.client.registerWithEureka = false
+eureka.client.fetchRegistry = false
+eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
