--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+spring.application.name=zuul 
+server.port=8011
+eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+#management.security.enabled = false
+#zuul.routes.rab.path=/rab/**
+#zuul.routes.client.url=http://localhost:8080/client
 
-server.port = 8010
-spring.application.name = discoveryservice
-eureka.client.registerWithEureka = false
-eureka.client.fetchRegistry = false
-eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
